# fix

./: .clang-format  .editorconfig  .gitignore  CLAUDE.md  CMakeLists.txt  Doxyfile  MailMap  README.md  compile_flags.txt  format.sh
example/fix_tag_example/: CMakeLists.txt  example.cpp
examples/fix_tag_example/: example.cc
examples/hash_crc32_example/: CMakeLists.txt  example.cc
examples/simple_unique_socket/: CMakeLists.txt  example.cc
include/ocl/: fix.hpp
include/ocl/fix/: checksum.hpp  parser.hpp
include/ocl/fix/detail/: config.hpp
src/fix/: parser_impl.cpp
test/fix_basic/: CMakeLists.txt  fix.test.cpp
tests/fix_basic/: CMakeLists.txt  fix_test.cc
